# automobile_cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Automobile.h  ElectricCar.h  MaintenanceLibrary.h  MaintenanceTask.h
src/: Automobile.cpp  ElectricCar.cpp  MaintenanceLibrary.cpp  MaintenanceTask.cpp
test/: AutomobileTest.cpp  MaintenanceLibraryTest.cpp
